# media-reducer

./: .gitignore  BUILD.md  Dockerfile  INSTALL.md  README.md  build.ps1  render.yaml  setup_desktop.ps1
.cursor/skills/media-reducer/: SKILL.md
backend/: Dockerfile  build_backend.ps1  compressor.py  fly.toml  main.py  railway.json  render.yaml  requirements-dev.txt  requirements.txt
backend/.github/workflows/: deploy-backend.yml
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/.github/workflows/: deploy.yml
frontend/src/: App.tsx  api.ts  index.css
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/nsis/: hooks.nsh
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: DropZone.tsx  FileList.tsx  ProgressBar.tsx  ResultsPanel.tsx
