[package]
name = "media-reducer"
version = "0.1.0"
description = "Media Reducer Desktop App"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "media_reducer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "time"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
